Fix headings in dark mode

--- a/SwanHub/swanhub/static/css/style.less
+++ b/SwanHub/swanhub/static/css/style.less
@@ -42,7 +42,8 @@ a:focus {
 }
 
 .h-mixin {
-    color: @color-primary;
+    // same as the .text-primary bootstrap class
+    color: rgb(var(--bs-primary-rgb));
     font-family: @font_family_1;
 
     a:hover {
